fix: move to verbose output 2
Signed-off-by: GitHub <noreply@github.com>

--- a/tests/verbose_output.yml
+++ b/tests/verbose_output.yml
@@ -8,7 +8,7 @@ testcases:
     script: NO_COLOR=1 {{.venom.executable}} run failing/verbose_output.yml {{.value.opt}}
     range:
       verbose:
-        opt: "-v"
+        opt: "-vv"
         op: Should
       default:
         opt: ""
